--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,10 @@
 .App {
   text-align: center;
 }
-.carousel{
-  padding-top: 70px;
-}
-
-#button{
-  display: flex;
+.background{
+  background-image: url(https://images.unsplash.com/photo-1515268064940-5150b7c29f35?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTh8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60);
+  background-size: cover;
+  position: fixed;
+  min-width: 100%;
+  min-height: 100%;
 }
